--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 
 
   <script src="main.js"></script>
+
+  <!-- MEDIA QUERRY TEMPORAL-->
+
+  <div id="mobile-blocker">
+    Please turn on the desktop mode
+  </div>
   
 </body>
 </html>
