--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <!-- MEDIA QUERRY TEMPORAL-->
 
   <div id="mobile-blocker">
-    Please turn on the desktop mode
+    if you are using a mobile device you might need to turn on the desktop view
   </div>
   
 </body>
