--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="./img/kimga.gif" type="image/gif">
+  <link rel="icon" href="./img/julia.png" type="image/png">
   <title>Telurines</title>
   
   <!-- HTML -->
