--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="./img/kimga.gif" type="image/gif">
+
   <title>Telurines</title>
   
   <!-- HTML -->
@@ -56,12 +56,9 @@
 
 
   <script src="main.js"></script>
-
-  <!-- MEDIA QUERRY TEMPORAL-->
-
   <div id="mobile-blocker">
-    you might need to <br> turn on the desktop view
-  </div>
+    Please turn on the desktop mode
+</div>
   
 </body>
 </html>
