--- a/index.html
+++ b/index.html
@@ -15,39 +15,17 @@
 </head>
 
 <body>
-  <nav>xd</nav>
-  <br />
-  <hr />
+  <div class="admain">
+    <div><img src="./img/stydddl.jpg" class="ad x1"/></div>
+    <div><img src="./img/ng.jpg" class="ad x2"></div>
+  </div>
 <header>
     <div>
         <h1 data-text="Telurines" class="egg">Telurines</h1>
     </div>
     <img src="./img/emi.gif" class="emi">
 </header>
-
-<div id="uou">
-    <div class="w">
-      <main>
-        <h2>Telurines</h2><br>
-        <p>Telurines adalah perusahaan serba guna. Halaman ini saat ini berfungsi sebagai arsip untuk Xi, yang merupakan CEO Telurines, sehingga menjadikannya arsip resmi perusahaan. 
-        </p>
-        <p>
-          <b>Setiap bagian selain bagian yang berdekatan berfungsi secara eksklusif sebagai indeks atau direktori tautan ke situs eksternal.<br>
-          Bagian tersebut tidak menyimpan, menyalin, meneruskan, atau mengontrol materi berhak cipta apa pun.<br>
-          Tanggung jawab atas konten yang ditautkan sepenuhnya berada pada pemilik situs tempat konten tersebut dihosting.</b><br>
-          Jika Anda yakin bahwa tautan tertentu melanggar hak Anda, silakan hubungi kami untuk ditinjau.
-        </p>
-      </main>
-    </div>
-    <aside id="xd">
-      <div id="indexines">
-        THERE'S NOTHING TO SEE HERE YET
-      </div>
-    </aside>
-</div>
-<div id="o">
-  <img src="./img/stydddl.jpg" >
-</div><br>
+<nav id="nav2">xdf</nav>
 <hr>
 <section id="cf">
   <p id="j">Banyak</p>
@@ -59,6 +37,7 @@
   <div id="mobile-blocker">
     Please turn on the desktop mode
 </div>
+<h2 id="vt">Versi terbaru 0.5</h2>
   
 </body>
 </html>
