--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
     </div>
 </header>
 <nav id="nav2">xdf</nav>
-<hr>
-<section id="cf">
-  <p id="j">Banyak</p>
-  <img src="./img/emt.gif" id="gy">
-</section>
-
-
+<div id="cf">
+  <aside id="sb">sidebar</aside>
+  <main id="mn">main</main>
+  <footer id="ft">footer</footer>
+</div>
   <script src="main.js"></script>
-<h2 id="vt">Versi terbaru 0.5</h2>
-  
 </body>
 </html>
