--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 </header>
 <nav id="nav2">xdf</nav>
 <div id="cf">
-  <aside id="sb">sidebar</aside>
+  <aside id="sb">
+    <section id="terbaru">
+      <p id="terbaru p">TERBARU</p>
+      <div id="versi"> <p id="versi p"> Versi 0.7</p></div>
+    </section>
+  </aside>
   <main id="mn">main</main>
   <footer id="ft">footer</footer>
 </div>
