--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 <nav id="nav2">xdf</nav>
 <div id="cf">
   <aside id="sb">
-    <section id="terbaru">
-      <p id="terbaru p">TERBARU</p>
-      <div id="versi"> <p id="versi p"> Versi 0.7</p></div>
-    </section>
+    <div id="bt">
+      <section id="terbaru">
+        <p id="terbaru p">TERBARU</p>
+        <div id="versi"> <p id="versi p"> Versi 0.7</p></div>
+      </section>
+      <img src="./img/emt.gif">
+    </div>
   </aside>
   <main id="mn">main</main>
   <footer id="ft">footer</footer>
