--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="img/kimga.gif" type: "icon/x-image">
 </head>
 
 <body>
@@ -31,8 +32,13 @@
       <img src="./img/emt.gif">
     </div>
   </aside>
-  <main id="mn">main</main>
-  <footer id="ft">footer</footer>
+  <main id="mn">
+    <h1>Telurines </h1>
+    <p>
+      Telurines adalah kumpulan barang-barang serbaguna yang dibuat oleh Xi.
+    </p>
+  </main>
+  <footer id="ft"></footer>
 </div>
   <script src="main.js"></script>
 </body>
