--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p id="terbaru p">TERBARU</p>
         <div id="versi"> <p id="versi p"> Versi 0.7</p></div>
       </section>
-      <img src="./img/emt.gif">
+      <!--img src="./img/emt.gif"-->
     </div>
   </aside>
   <main id="mn">
@@ -37,6 +37,7 @@
     <p>
       Telurines adalah kumpulan barang-barang serbaguna yang dibuat oleh Xi.
     </p>
+    <img src="img/rikka.gif" class="rikka">
   </main>
   <footer id="ft"></footer>
 </div>
