--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <p>
       Telurines adalah kumpulan barang-barang serbaguna yang dibuat oleh Xi.
     </p>
+    <<img src="./img/rikka.gif" class="rikka">
   </main>
   <footer id="ft"></footer>
 </div>
