--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     <p>
       Telurines adalah kumpulan barang-barang serbaguna yang dibuat oleh Xi.
     </p>
-    <<img src="./img/rikka.gif" class="rikka">
+    <br>
+    <img src="./img/rikka.gif" class="rikka">
+    <h2>
+      Situs ini masih dalam tahap pembangunan. <br><br>Terimakasih.
+    </h2>
   </main>
   <footer id="ft"></footer>
 </div>
