--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div id="versi"> <p id="versi p"> Versi 0.7</p></div>
       </section>
       <!--img src="./img/emt.gif"-->
+      <a href="./isekaikaramekishikoni/index.html">Coming soon</a>
     </div>
   </aside>
   <main id="mn">
