--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="img/kimga.gif" type: "icon/x-image">
+  <link rel="icon" href="img/telurines.png" type: "icon/x-image">
 </head>
 
 <body>
@@ -47,5 +47,6 @@
   <footer id="ft"></footer>
 </div>
   <script src="main.js"></script>
+  <img src="img/telurines.png" class="logo">
 </body>
 </html>
