--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
         <p id="terbaru p">TERBARU</p>
         <div id="versi"> <p id="versi p"> Versi 0.7</p></div>
       </section>
-      <!--img src="./img/emt.gif"-->
-      <a href="./isekaikaramekishikoni/index.html">Coming soon</a>
+      <a href="./isekaikaramekishikoni/index.html">Main project</a>
     </div>
   </aside>
   <main id="mn">
-    <h1>Telurines </h1>
-    <p>
+    <h1 class="inf">Telurines </h1>
+    <p class="inf">
       Telurines adalah kumpulan barang-barang serbaguna yang dibuat oleh Xi.
     </p>
     <br>
@@ -43,6 +42,9 @@
     <h2>
       Situs ini masih dalam tahap pembangunan. <br><br>Terimakasih.
     </h2>
+    <div id="featured">
+      o
+    </div>
   </main>
   <footer id="ft"></footer>
 </div>
