--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="bt">
       <section id="terbaru">
         <p id="terbaru p">TERBARU</p>
-        <div id="versi"> <p id="versi p"> Versi 0.7</p></div>
+        <div id="versi"> <p id="versi p"> Versi 0.9</p></div>
       </section>
       <a href="./isekaikaramekishikoni/index.html">Main project</a>
     </div>
@@ -48,6 +48,7 @@
   </main>
   <footer id="ft"></footer>
 </div>
+<a id="adhs" href="./huashijiep.html"><img src="./img/hsjp.gif"></a>
   <script src="main.js"></script>
   <img src="img/telurines.png" class="logo">
 </body>
