--- a/index.html
+++ b/index.html
@@ -16,40 +16,27 @@
 </head>
 
 <body>
-<header>
-    <div>
+  <header>
+    <div class="header">
         <h1 data-text="Telurines" class="egg">Telurines</h1>
     </div>
 </header>
-<nav id="nav2">xdf</nav>
-<div id="cf">
-  <aside id="sb">
-    <div id="bt">
-      <section id="terbaru">
-        <p id="terbaru p">TERBARU</p>
-        <div id="versi"> <p id="versi p"> Versi 0.9</p></div>
-      </section>
-      <a href="./isekaikaramekishikoni/index.html">Main project</a>
-    </div>
-  </aside>
-  <main id="mn">
-    <h1 class="inf">Telurines </h1>
-    <p class="inf">
-      Telurines adalah kumpulan barang-barang serbaguna yang dibuat oleh Xi.
-    </p>
-    <br>
-    <img src="./img/rikka.gif" class="rikka">
-    <h2>
-      Situs ini masih dalam tahap pembangunan. <br><br>Terimakasih.
-    </h2>
-    <div id="featured">
-      o
+<nav>e</nav>
+  <div id="terbaru">
+    <div class="brown" id="xd">Terbaru</div>
+    <div class="white" id="white">Versi: 1</div>
+  </div>
+  <main>
+    <div class="brown">Contents</div>
+    <div class="white" id="konten">
+      <a href="./isekaikaramekishikoni">>Main project</a>
+      <a href="./huashijiep.html">>HuaShijie Pro</a>
     </div>
   </main>
-  <footer id="ft"></footer>
-</div>
-<a id="adhs" href="./huashijiep.html"><img src="./img/hsjp.gif"></a>
+  <a src="./huashijiep.html"><img src="./img/hsjp.gif" id="hsj"></a>
+  <footer>
+    <a href="https://discord.gg/DGRg3ASp" id="a">>Discord</a>
+  </footer>
   <script src="main.js"></script>
-  <img src="img/telurines.png" class="logo">
 </body>
 </html>
