--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="./huashijiep.html">>HuaShijie Pro</a>
     </div>
   </main>
-  <a src="./huashijiep.html"><img src="./img/hsjp.gif" id="hsj"></a>
+  <a href="./huashijie/huashijiep.html"><img src="./img/hsjp.gif" id="hsj"></a>
   <footer>
     <a href="https://discord.gg/DGRg3ASp" id="a">>Discord</a>
   </footer>
