--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
 <nav>e</nav>
   <div id="terbaru">
     <div class="brown" id="xd">Terbaru</div>
-    <div class="white" id="white">Versi: 1</div>
+    <div class="white" id="white">Versi: 1.1</div>
   </div>
   <main>
     <div class="brown">Contents</div>
     <div class="white" id="konten">
-      <a href="./isekaikaramekishikoni">>Main project</a>
-      <a href="./huashijiep.html">>HuaShijie Pro</a>
+      <a href="huashijiep/index.html">>HuaShijie Pro</a>
     </div>
   </main>
-  <a href="./huashijie/huashijiep.html"><img src="./img/hsjp.gif" id="hsj"></a>
+  <a href="huashijiep/index.html"><img src="./img/hsjp.gif" id="hsj"></a>
   <footer>
     <a href="https://discord.gg/DGRg3ASp" id="a">>Discord</a>
   </footer>
