--- a/huashijiep/index.html
+++ b/huashijiep/index.html
@@ -49,6 +49,8 @@
       </li>
     </ul>
   </section>
+  <h2> Tutorial básico:</h2>
+  <iframe width="99%" height="300px" src="https://www.youtube.com/embed/Uxqh2SZx9Ww?si=AXDX0mjsUUztgtfg&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <script>
     const userLanguage = navigator.language || navigator.userLanguage;
     const hasSeenAlert = localStorage.getItem('alertShown');
