--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div class="brown" id="xd">Terbaru</div>
     <div class="white" id="white">Versi: 1.1</div>
   </div>
+  <section class="ads">
+    <a href="ad.html"><img src="img/ad.png" ></a>
+  </section>
   <main>
     <div class="brown">Contents</div>
     <div class="white" id="konten">
