--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
     <div class="brown" id="xd">Terbaru</div>
     <div class="white" id="white">Versi: 1.1</div>
   </div>
-  <section class="ads">
-    <a href="ad.html"><img src="img/ad.png" ></a>
+  <section class="carousel">
+    <div class="ads">
+      <a href="https://youtu.be/Uxqh2SZx9Ww?si=pTdWLCd8TJQ8Ysfo" class="ad1"><img src="img/adhua.png"></a>
+      <a href="ad.html" class="ad2"><img src="img/ad.png" ></a>
+    </div>
+    <div aria-hidden class="ads">
+      <a href="https://youtu.be/Uxqh2SZx9Ww?si=pTdWLCd8TJQ8Ysfo" class="ad1"><img src="img/adhua.png"></a>
+      <a href="ad.html" class="ad2"><img src="img/ad.png"></a>
+    </div>
   </section>
   <main>
     <div class="brown">Contents</div>
