--- a/huashijiep/index.html
+++ b/huashijiep/index.html
@@ -45,7 +45,7 @@
         <a href="download.html">Descargar</a>
       </li>
       <li>
-        <a href="#">Tutoriales y traducciones (Aún en construcción)</a>
+        <a href="howto.html">Tutoriales y traducciones (Aún en construcción)</a>
       </li>
     </ul>
   </section>
