--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     <div class="ads">
       <a href="https://youtu.be/Uxqh2SZx9Ww?si=pTdWLCd8TJQ8Ysfo" class="ad1"><img src="img/adhua.png"></a>
       <a href="ad.html" class="ad2"><img src="img/ad.png" ></a>
+      <a href="#"><img src="img/ju.png"/></a>
     </div>
     <div aria-hidden class="ads">
       <a href="https://youtu.be/Uxqh2SZx9Ww?si=pTdWLCd8TJQ8Ysfo" class="ad1"><img src="img/adhua.png"></a>
       <a href="ad.html" class="ad2"><img src="img/ad.png"></a>
+      <a href="#"><img src="img/ju.png"/></a>
     </div>
   </section>
   <main>
@@ -42,6 +44,7 @@
       <a href="huashijiep/index.html">>HuaShijie Pro</a>
     </div>
   </main>
+  <h3>Anuncios</h3>
   <a href="huashijiep/index.html"><img src="./img/hsjp.gif" id="hsj"></a>
   <footer>
     <a href="https://discord.gg/DGRg3ASp" id="a">>Discord</a>
