--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <div class="brown">Contents</div>
     <div class="white" id="konten">
       <a href="huashijiep/index.html">>HuaShijie Pro</a>
+      <a href="xi.html">>Xi</a>
     </div>
   </main>
   <h3>Anuncios</h3>
