--- a/xi.html
+++ b/xi.html
@@ -9,16 +9,22 @@
 </head>
 
 <body>
+  <img src="img/xi.jpg">
   <h1>Xi</h1>
   <br>
   <hr>
   <br>
-  <a href="">Facebook</a>
+  <a href="https://www.facebook.com/share/1CRKmUjF7r/">>Facebook</a>
   <style>
     body {
       display: block;
       text-align: center;
       font-family: monospace;
+      background: beige;
+    }
+    img {
+      max-width: 200px;
+      border: black solid 2px;
     }
   </style>
 </body>
