--- a/huashijiep/index.html
+++ b/huashijiep/index.html
@@ -14,43 +14,34 @@
 
 <body>
   <header>
-    <img src="images/logo.jpg">
-    <article>
-      <h3>
-        ¿Lo sabías?
-      </h3> 
-      "画" Signica pintura/dibujo y "世界" Es mundo.
-    </article>
+    <img src="images/logo.jpg" id="img1">
+    <h1>画世界 Pro</h1>
+    <img src="../img/teluri.png" id="img2">
   </header>
-
-  <Div>
-    <h1>
-      Hua Shijie Pro
-    </h1>
-    <hr>
-    <p>Hua Shijie Pro en app de dibujo especialmente optimizada para teléfonos y tablets.</p>
-    <p>Entre sus características mas destacadas, además de ser bastante fluida en dispositivos no tan recientes, incluye también mas de 100 pinceles y una gran cantidad de ajustes para estos, incluso puedes importar pinceles de Photoshop en formato ABR.</p>
-    <p> Además tiene distintos filtros que a diferencia de itras apps, son completamente gratuitos, tales como mapa de gradientes y curva de tonos, entre otros.</p>
-  </Div>
+  <section class="destacados">
+    <h2> Tutorial básico:</h2>
+    <iframe width="99%" height="300px" src="https://www.youtube.com/embed/Uxqh2SZx9Ww?si=AXDX0mjsUUztgtfg&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </section>
+  
+    <main>
+      <h2>Hua Shijie Pro</h2 id="titl">
+      <hr>
+      <p>Hua Shijie Pro es una app de dibujo especialmente optimizada para teléfonos y tablets.</p>
+      <p>Entre sus características mas destacadas, además de ser bastante fluida en dispositivos no tan recientes, incluye también mas de 100 pinceles y una gran cantidad de ajustes para estos, incluso puedes importar pinceles de Photoshop en formato ABR.</p>
+      <p> Además tiene distintos filtros que a diferencia de itras apps, son completamente gratuitos, tales como mapa de gradientes y curva de tonos, entre otros.</p><br>
+      <p>Es importante aclarar que en esta app no es posible iniciar sesión, subir a la nube tus proyectos o crear pinceles si no tienes un número de teléfono oriental.</p>
+    </main>
   <div class="warning">
-    <h2>
-      IMPORTANTE /!\
-    </h2>
-    <p>Es necesario recalcar que la aplicación está totalmente en chino, toda la interfaz y herramientas están en chino y no hay ajustes de idioma, ni siquiera inglés.</p>
-    <p> Por eso mismo, haré algunos tutoriales y listas con traducción de cada boton, opción y herramienta. Aunque tengan en cuenta que nadie me ayuda así que tomará un poco de tiempo.</p>
+      <h2>
+        IMPORTANTE /!\
+      </h2>
+      <p>Es necesario recalcar que la aplicación está totalmente en chino, toda la interfaz y herramientas están en chino y no hay ajustes de idioma, ni siquiera inglés.</p>
+      <p> Por eso mismo, haré algunos tutoriales y listas con traducción de cada boton, opción y herramienta. Aunque tengan en cuenta que nadie me ayuda así que tomará un poco de tiempo.</p>
   </div>
   <section>
-    <ul>
-      <li>
-        <a href="download.html">Descargar</a>
-      </li>
-      <li>
-        <a href="howto.html">Tutoriales y traducciones (Aún en construcción)</a>
-      </li>
-    </ul>
+    <a href="download.html"> ▶Descargar</a>
+    <a href="howto.html">▶Tutoriales y traducciones</a>
   </section>
-  <h2> Tutorial básico:</h2>
-  <iframe width="99%" height="300px" src="https://www.youtube.com/embed/Uxqh2SZx9Ww?si=AXDX0mjsUUztgtfg&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <script>
     const userLanguage = navigator.language || navigator.userLanguage;
     const hasSeenAlert = localStorage.getItem('alertShown');
@@ -58,9 +49,14 @@
     if (userLanguage.startsWith('es') && !hasSeenAlert) {
     alert("Actualizo la página cada que puedo, se que ahora luce fea pero mejorará con el tiempo. X: @xixdxd");
     localStorage.setItem('alertShown', 'true');
-}
-
+    }
   </script>
+<div id="show">
+  <h3>Aquí una muestra de los resultados de la app</h3>
+  <hr><br>
+  <img src="images/show/1.jpg" class="xd" alt="by xi">
+</div>
+
 </body>
 
 </html>
