--- a/huashijiep/howto.html
+++ b/huashijiep/howto.html
@@ -11,12 +11,20 @@
 </head>
 
 <body>
-  <h1 data-text="Lista de tutoriales" class="egg">Lista de tutoriales </h1>
+  <header>
+    <img src="images/logo.jpg" class="imglogo">
+    <h1>Tutoriales y traducciones</h1>
+    <img src="../img/teluri.png" class="imglogo" id=""/>
+  </header>
   <a href="index.html">←Volver</a>
-  <div class="img">
-    <img src="images/logo.jpg">
-  </div>
   <br>
+<main>
+    <h2>Contenido</h2>
+    <hr>
+    <p>Aquí encontrarás tutoriales como usar huashijie pro, a pesar de que es bastante intuitiva, algunas cosas pueden ser más complicadas en otro idioma. Aquí todo estará más detallado incluso sí la diferencia es minima, en Youtube estará un poco simplificado.<br> También habrán traducciones de todo, es decir mostraré una screenshot del contenido original de la app y justo después estaría la misma pero traducida.</p>
+    <br><hr>
+    <p>Esto lo hago yo solo así que tengan paciencia. Si alguien quiere aportar algo sobre la app para que todos sepan, <a href="../xi.html" id="xi">contácteme</a>.</p>
+</main>
   <div class="buttons">
     <p>Es muy importante que memorizes estas dos palabras. <br>La de la izquierda significa no, cancelar, volver, etc. <br>La derecha significa si, ok, continuar, etc.</p>
     <img src="images/buttons.png" id="xd"/>
@@ -24,9 +32,12 @@
   <hr>
   <br>
   <section>
+    <h3>Tutoriales</h3>
     <a href="readerhsp.html?file=descarga.md">>Descarga</a>
     <a href="readerhsp.html?file=inicio.md">>Inicio de la app</a>
     <a href="readerhsp.html?file=save.md">>Guardar/Exportar</a>
+    <h3>Traducciones</h3>
+    <a href="readerhsp.html?file=filtros.md">>Filtros</a>
   </section>
 </body>
 
