--- a/huashijiep/download.html
+++ b/huashijiep/download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Descarga</title>
+    <title>Descargar Hua Shijie Pro 画世界Pro</title>
     <link rel="stylesheet" href="css/down.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="icon" href="images/logo.jpg" type: "icon/x-image">
