--- a/huashijiep/index.html
+++ b/huashijiep/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>画世界</title>
+  <title>Como usar Hua Shijie Pro 画世界</title>
   <link rel="stylesheet" href="css/stylehua.css">
   <link rel="icon" href="images/logo.jpg" type: "icon/x-image">
   <style>
