--- a/huashijiep/howto.html
+++ b/huashijiep/howto.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tutoriales Huashijie Pro</title>
+  <link rel="canonical" href="https://telurines.pages.dev/huashijiep/howto.html" />
+
+  <title>Como usar Huashijie Pro, tutoriales y guías 画世界Pro </title>
+  <meta name="description" content="Aprende a descargar y usar HUA SHIJIE PRO o 画世界Pro, la mejor app china de dibujo para moviles, aquí encontrarás tutoriales y guías de xomo usar Hua Shijie Pro paso a paso. Verás como y donde conseguir hua shijie pro y como usarla. Como usar huas hijie pro, hua shijie pro, tutorial huashijie pro, hua shijie pro app, hua shijie pro descargar, 画世界Pro 画世界Pro descargar 画世界Pro tutorial"/>
     
   <link rel="icon" href="images/logo.jpg" type: "icon/x-image">
   <link rel="stylesheet" href="css/tutorialmenu.css">
