--- a/huashijiep/index.html
+++ b/huashijiep/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Como usar Hua Shijie Pro 画世界</title>
+  <link rel="canonical" href="https://telurines.pages.dev/huashijiep/" />
+
+  <title>Sobre Hua Shijie Pro 画世界</title>
+  <meta name="description" content=" Hua Shijie Pro o 画世界Pro es una de las mejores apps de dibujo moviles, se trata de una app china optimiazada para dibujo en dispositivos Android, mucho mas fluida que ibis paint. Huashijie, HUASHIJIEPRO, hua shi jie pro, huashijie pro hua shijie pro descargar" />
   <link rel="stylesheet" href="css/stylehua.css">
   <link rel="icon" href="images/logo.jpg" type: "icon/x-image">
   <style>
