--- a/ad.html
+++ b/ad.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="canonical" href="https://telurines.pages.dev/ad.html" />
+
   <title>Anúnciate</title>
   <link rel="icon" href="img/telurines.png" type: "icon/x-image">
 </head>
