--- a/xi.html
+++ b/xi.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="canonical" href="https://telurines.pages.dev/xi.html" />
+
   <title>Xi</title>
   <link rel="shortcut icon" type="image/x-icon" href="img/julia.png">
 </head>
