--- a/huashijiep/index.html
+++ b/huashijiep/index.html
@@ -51,7 +51,7 @@
     const hasSeenAlert = localStorage.getItem('alertShown');
 
     if (userLanguage.startsWith('es') && !hasSeenAlert) {
-    alert("Actualizo la página cada que puedo, se que ahora luce fea pero mejorará con el tiempo. X: @xixdxd");
+    alert("Actualizo la página cada que puedo, se que ahora luce fea pero mejorará con el tiempo.);
     localStorage.setItem('alertShown', 'true');
     }
   </script>
