--- a/huashijiep/folderbru.html
+++ b/huashijiep/folderbru.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Descargar Hua Shijie Pro 画世界Pro</title>
-    <link rel="canonical" href="https://telurines.pages.dev/huashijiep/download.html" />
+    <title>Carpetas de pinceles en 画世界Pro</title>
+    <link rel="canonical" href="https://telurines.pages.dev/huashijiep/folderbru.html" />
+    <meta name="description" content="Cómo crear grupos de pinceles en HUASHIJIEPRO 画世界Pro"
     <link rel="stylesheet" href="css/down.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="icon" href="images/logo.jpg" type: "icon/x-image">
 </head>
 <body>
+    <a href="index.html">←Volver</a>
+    <h1>Cómo crear carpetas o grupos de pinceles en hua shijie Pro</h1>
 
     <main id="render-area" class="markdown-body">
         Cargando tutorial...
@@ -21,7 +24,7 @@
             
             try {
                 // AQUÍ pones el nombre del archivo MD que corresponde a ESTA página
-                const archivo = 'documentos/descarga.md'; 
+                const archivo = 'documentos/brushf.md'; 
                 
                 const respuesta = await fetch(archivo);
                 if (!respuesta.ok) throw new Error("No se pudo cargar el archivo");
