--- a/huashijiep/howto.html
+++ b/huashijiep/howto.html
@@ -39,6 +39,7 @@
     <a href="readerhsp.html?file=descarga.md">>Descarga</a>
     <a href="readerhsp.html?file=inicio.md">>Inicio de la app</a>
     <a href="readerhsp.html?file=save.md">>Guardar/Exportar</a>
+    <a href="folderbru.html">>Carpetas de pinceles</a>
     <h3>Traducciones</h3>
     <a href="readerhsp.html?file=filtros.md">>Filtros</a>
   </section>
