--- a/huashijiep/folderbru.html
+++ b/huashijiep/folderbru.html
@@ -6,12 +6,12 @@
     <title>Carpetas de pinceles en 画世界Pro</title>
     <link rel="canonical" href="https://telurines.pages.dev/huashijiep/folderbru.html" />
     <meta name="description" content="Cómo crear grupos de pinceles en HUASHIJIEPRO 画世界Pro"
-    <link rel="stylesheet" href="css/down.css">
+    <link rel="stylesheet" href="./css/down.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="icon" href="images/logo.jpg" type: "icon/x-image">
 </head>
 <body>
-    <a href="index.html">←Volver</a>
+    <a href="howto.html">←Volver</a>
     <h1>Cómo crear carpetas o grupos de pinceles en hua shijie Pro</h1>
 
     <main id="render-area" class="markdown-body">
