--- a/huashijiep/folderbru.html
+++ b/huashijiep/folderbru.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carpetas de pinceles en 画世界Pro</title>
     <link rel="canonical" href="https://telurines.pages.dev/huashijiep/folderbru.html" />
-    <meta name="description" content="Cómo crear grupos de pinceles en HUASHIJIEPRO 画世界Pro"
+    <meta name="description" content="Cómo crear grupos de pinceles en HUASHIJIEPRO 画世界Pro">
     <link rel="stylesheet" href="./css/down.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="icon" href="images/logo.jpg" type: "icon/x-image">
