--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+  <title>Telurines</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="canonical" href="https://telurines.pages.dev/" />
-
-
-  <title>telurines._.xd</title>
-  
-  <!-- HTML -->
-  
-
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="img/telurines.png" type: "icon/x-image">
