--- a/ad.html
+++ b/ad.html
@@ -15,7 +15,7 @@
   <p>Pues eso, la página tampoco es que tenga muchas vistas asi que no obtendrías prácticamente nada. Aún asi me sobra bastante espacio así que están disponibles varios lugares.</p>
   
   <h2>Requisitios</h2>
-  <p>Tampoco se piden muchas cosas, no es necesario nada más que hacer tu anuncio de 370x255 y enviármelo.</p>
+  <p>Tampoco se piden muchas cosas, no es necesario nada más que hacer tu anuncio de 2000x500(o cualquier tamaño con esa relación de aspecto) y enviármelo.</p>
   <h3>
     <a href="index.html">>Volver</a>
   </h3>
