--- a/index.html
+++ b/index.html
@@ -1,51 +1,158 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="es">
 <head>
-  <title>Telurines</title>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="canonical" href="https://telurines.pages.dev/" />
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="img/telurines.png" type: "icon/x-image">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Telurines</title>
+    <link rel="icon" type="image/png" href="assets/iconx.png">
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <header>
-    <div class="header">
-        <h1 data-text="Telurines" class="egg">Telurines</h1>
+    <div class="container">
+        <!-- Header -->
+        <header class="header">
+            <div class="logo">
+                <img src="assets/icon.png" alt="Telurines" class="logo-icon">
+                <h1>Telurines<span class="plus">._.</span> xd</h1>
+            </div>
+            <div class="site-title">
+                <a href="xi.html">陈熙焱</a>
+            </div>
+        </header>
+
+        <!-- Navigation -->
+        <nav class="nav">
+            <ul class="nav-list">
+                <li><a href="noticias.html">News</a></li>
+                <li><a href="xi.html">Support</a></li>
+            </ul>
+        </nav>
+
+        <!-- Hero Carousel -->
+        <section class="hero">
+            <div class="carousel" id="carousel">
+                <button class="carousel-arrow carousel-arrow-left" id="arrowLeft" aria-label="Previous slide">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="15 18 9 12 15 6"></polyline>
+                    </svg>
+                </button>
+                <div class="carousel-track" id="carouselTrack">
+                    <div class="carousel-slide">
+                        <a href="huashijiep/index.html"><img src="assets/asset_1.png" alt="Como usar Hua Shijie Pro"></a>
+                    </div>
+                    <div class="carousel-slide">
+                        <a href="books.html"><img src="assets/htdm.png" alt="manga book"></a>
+                    </div>
+                </div>
+                <button class="carousel-arrow carousel-arrow-right" id="arrowRight" aria-label="Next slide">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="9 18 15 12 9 6"></polyline>
+                    </svg>
+                </button>
+            </div>
+        </section>
+
+        <!-- Main Content -->
+        <div class="main-content">
+            <!-- Topics Section -->
+            <section class="topics">
+                <h2 class="topics-title">Presentado</h2>
+                <ul class="topics-list">
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="./huashijiep/index.html">→Guía de uso y descarga de Hua shijie Pro </a>
+                    </li>
+                    <!--<li>
+                        <span class="diamond">◆</span>
+                        <a href="#">→Libros de dibujo</a>
+                    </li>-->
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">→Mi proyecto principal</a>
+                        <span class="date">[03.10]</span>
+                    </li>
+                    <!--<li>
+                        <span class="diamond">◆</span>
+                        <a href="#">『咎狗の血 True Blood Portable』好評発売中！</a>
+                        <span class="date">[12.23]</span>
+                    </li>
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">TVアニメ『咎狗の血』のサントラ「Light My Fire」本日発売！</a>
+                        <span class="date">[12.22]</span>
+                    </li>
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">CHiRAL MOBILEにて新企画「World's end Nightmare」配信スタート！</a>
+                        <span class="date">[12.16]</span>
+                    </li>
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">「sweet pool」コミックス第1巻発売中！</a>
+                        <span class="date">[11.10]</span>
+                    </li>
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">「CHAYAMACHI CHiRAL WORKS」発売中！</a>
+                        <span class="date">[10.01]</span>
+                    </li>
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">ブシロードTCG「アリス・クロス」に「Lamento -BEYOND THE VOID-」参戦！</a>
+                    </li>
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">「コミックビーズログ キュン！」『咎狗の血』(漫画：茶屋町勝呂)連載中！</a>
+                    </li>
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">「BE・BOY GOLD」「sweet pool」(漫画：車折まゆ)連載中！</a>
+                    </li>
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">『咎狗の血True Blood』（漫画：森田柚花）コミックス発売中！</a>
+                    </li>
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">WEBサポートへのお問い合わせについて</a>
+                    </li>
+                    <li>
+                        <span class="diamond">◆</span>
+                        <a href="#">ニトロプラス キラル製品のサポート情報はこちらをご覧ください</a>
+                    </li>-->
+                </ul>
+            </section>
+
+            <!-- Sidebar -->
+            <aside class="sidebar">
+                <div class="sidebar-banner">
+                    <a href="https://youtu.be/Uxqh2SZx9Ww?si=yakP5KjJmKp-1DLX">
+                        <img src="assets/asset_2.png" alt="tutorial de HuaShijie Pro">
+                    </a>
+                </div>
+                <div class="sidebar-banner">
+                    <a href="ad.html">
+                        <img src="assets/asset_3.png" >
+                    </a>
+                </div>
+                <!--<div class="sidebar-banner">
+                    <a href="#">
+                        <img src="assets/asset_6.png" alt="ikmm">
+                    </a>
+                </div>-->
+            </aside>
+        </div>
+
+        <!-- Footer Banner -->
+        <div class="footer-banner">
+            <div class="facebook">
+                <a href="https://www.facebook.com/share/1AejFMRSzd/">Facebook</a>
+            </div>
+        </div>
+
+        <!-- Footer -->
     </div>
-</header>
-<nav>e</nav>
-  <div id="terbaru">
-    <div class="brown" id="xd">Terbaru</div>
-    <div class="white" id="white">Versi: 1.1</div>
-  </div>
-  <section class="carousel">
-    <div class="ads">
-      <a href="https://youtu.be/Uxqh2SZx9Ww?si=pTdWLCd8TJQ8Ysfo" class="ad1"><img src="img/adhua.png"></a>
-      <a href="ad.html" class="ad2"><img src="img/ad.png" ></a>
-      <a href="#"><img src="img/ju.png"/></a>
-    </div>
-    <div aria-hidden class="ads">
-      <a href="https://youtu.be/Uxqh2SZx9Ww?si=pTdWLCd8TJQ8Ysfo" class="ad1"><img src="img/adhua.png"></a>
-      <a href="ad.html" class="ad2"><img src="img/ad.png"></a>
-      <a href="#"><img src="img/ju.png"/></a>
-    </div>
-  </section>
-  <main>
-    <div class="brown">Contents</div>
-    <div class="white" id="konten">
-      <a href="huashijiep/index.html">>HuaShijie Pro</a>
-      <a href="xi.html">>Xi</a>
-    </div>
-  </main>
-  <h3>Anuncios</h3>
-  <a href="huashijiep/index.html"><img src="./img/hsjp.gif" id="hsj"></a>
-  <footer>
-    <a href="https://discord.gg/DGRg3ASp" id="a">>Discord</a>
-  </footer>
-  <script src="main.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
