--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="huashijiep/index.html"><img src="assets/asset_1.png" alt="Como usar Hua Shijie Pro"></a>
                     </div>
                     <div class="carousel-slide">
-                        <a href="books.html"><img src="assets/htdm.png" alt="manga book"></a>
+                        <a href="https://drive.google.com/file/d/1-0WZnDNluAWvV-emcv-Dom0w1OrLjniD/view?usp=drivesdk"><img src="assets/htdm.png" alt="manga book"></a>
                     </div>
                 </div>
                 <button class="carousel-arrow carousel-arrow-right" id="arrowRight" aria-label="Next slide">
