--- a/huashijiep/howto.html
+++ b/huashijiep/howto.html
@@ -16,8 +16,8 @@
 <body>
   <header>
     <img src="images/logo.jpg" class="imglogo">
-    <h1>Tutoriales y traducciones</h1>
-    <img src="../img/teluri.png" class="imglogo" id=""/>
+    <h1 class="hu">Tutoriales y traducciones</h1>
+    <img src="../img/teluri.png" class="imglogo" id="huevo"/>
   </header>
   <a href="index.html">←Volver</a>
   <br>
