--- a/huashijiep/readerhsp.html
+++ b/huashijiep/readerhsp.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    <header>
+        <img src="images/logo.jpg" class="imglogo">
+        <h1 class="hu">Tutoriales y traducciones</h1>
+        <img src="../img/teluri.png" class="imglogo" id="huevo"/>
+  </header>
     <a href="howto.html" class="back-link">← Volver al menú</a>
     <div id="content">Cargando contenido...</div>
 
