--- a/noticias.html
+++ b/noticias.html
@@ -13,10 +13,11 @@
   <br>
   <br>
   <br>
+  >Añadido un header a los <a href="huashijiep/howto.html">tutoriales de 画世界Pro</a>[27.02.26]<br><hr>
   >Version actual: 1.5 [25.02.26]<br><hr>
   >se actualizó todo el layout de la página principal.[25.02.06]<br><hr>
   >Se añadió el apartado "<a href="#">log</a></a>".[25.02.26]<br><hr>
-  >Se añadió "Cómo hacer <a href="huashijiep/folderbru.html">grupos de pinceles</a>" a los <a href="#">tutoriales de 画世界Pro</a>. [24.02.26]<hr>
+  >Se añadió "Cómo hacer <a href="huashijiep/folderbru.html">grupos de pinceles</a>" a los <a href="huashijiep/howto.html">tutoriales de 画世界Pro</a>. [24.02.26]<hr>
 </body>
 
 </html>
